<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

    <TextView
        android:id="@+id/dialog_room_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#3F51B5"
        android:textSize="13sp"
        android:visibility="gone" />

        <!-- 分割线 -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E0E0E0"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_remaining_label"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_spawn_hour"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/input_hour_hint"
            android:gravity="center"
            android:layout_marginEnd="4dp"/>

        <EditText
            android:id="@+id/edit_spawn_minute"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/input_minute_hint"
            android:gravity="center"
            android:layout_marginEnd="4dp"/>

        <EditText
            android:id="@+id/edit_spawn_second"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:gravity="center"
            android:hint="@string/input_second_hint"/>
    </LinearLayout>

    </LinearLayout>
</ScrollView>